# mao_thought_and_philosophy

./: .editorconfig  .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  cspell.json  pyproject.toml  restore_old_format.py  代码检查.md
docs/: 毛主席教我们当省委书记.epub
openspec/: config.yaml
output/knowledge_base/: 00_全书概览_Index.md  knowledge_graph.json
output/knowledge_base/.obsidian/: workspace.json
output/knowledge_base/chapters/: 001_中国社会各阶级的分析.md  002_湖南农民运动考察报告.md  003_中国的红色政权为什么能够存在？.md  004_井冈山的斗争.md  005_关于纠正党内的错误思想.md  006_星星之火，可以燎原.md  007_反对本本主义.md  008_必须注意经济工作.md  009_怎样分析农村阶级.md  010_我们的经济政策.md  011_关心群众生活，注意工作方法.md  012_论反对日本帝国主义的策略.md  013_中国革命战争的战略问题.md  014_关于蒋介石声明的声明.md  015_中国共产党在抗日时期的任务.md  016_为争取千百万群众进入抗日民族统一战线而斗争.md  017_实践论.md  018_矛盾论.md  019_反对日本进攻的方针、办法和前途.md  01_省委第一书记要抓理论工作.md  020_为动员一切力量争取抗战胜利而斗争.md  021_反对自由主义.md  022_国共合作成立后的迫切任务.md  024_上海太原失陷以后抗日战争的形势和任务.md  026_抗日游击战争的战略问题.md  027_论持久战.md  036_和中央社、扫荡报、新民报三记者的谈话.md  042_斯大林是中国人民的朋友.md  046_团结一切抗日力量，反对反共顽固派.md  055_论政策.md  05_不是书记一个人说了算.md  060_改造我们的学习.md  062_关于反法西斯的国际统一战线.md  063_在陕甘宁边区参议会的演说.md  082_两个中国之命运.md  086_赫尔利和蒋介石的双簧已经破产.md  093_评蒋介石发言人谈话.md  095_关于重庆谈判.md  096_国民党进攻的真相.md  098_一九四六年解放区工作的方针.md  (+99 more)
output/knowledge_base/concepts/: 9010纠错原则.md  9010赋能法则.md  MVP迭代工业法.md  Subjective-Objective Alignment Model.md  Two-Front Struggle (Internal & External) Model.md  一元化领导.md  一平二调.md  一张一弛调节机制.md  三个世界划分理论.md  三依靠.md  三查三整.md  三类划分对标法.md  三级干部会.md  三要三不要.md  三项伟大革命运动.md  上层建筑重构.md  上马下马论.md  不断革命论.md  东方慕尼黑.md  东西方钳形攻势.md  两个务必.md  两条战线斗争.md  两条路线斗争.md  两面派识别.md  中心工作统筹法.md  中间地带分层战略.md  中间阶层转化漏斗.md  主动权获取模型.md  主权红线锁定.md  主权背书策略.md  九字方针.md  事前请示事后报告.md  二元治理模型.md  二元舆论治理.md  二元预期管理.md  二分法评价模型.md  五十天路线.md  人力资本可持续模型.md  人民武装.md  人民民主专政.md  (+317 more)
output/knowledge_base_back/: 00_全书概览_Index.md
output/knowledge_base_back/.obsidian/: appearance.json  graph.json  workspace.json
output/knowledge_base_back/chapters/: 02_在路线问题上要戒左戒右.md  04_对原则性问题要有明确态度.md  06_要反对官气.md  09_开会要注意抓思想动向.md  10_文件、文章、讲话要准确、鲜明、生动.md  11_对犯错误者的态度和方法.md  15_干部参加劳动是百年大计.md  23_让我们来个读书比赛.md  25_学习经典著作，不迷信经典作家.md  26_学点历史，古为今用.md  27_学点外语，洋为中用.md  29_关于读书的方法.md  33_毛主席与农业学大寨.md
output/knowledge_base_back/concepts/: Constructive Antagonism Framework.md  Dialectical Reading Method.md  Organizational Immune System Activation Mechanism.md  Stakeholder Dialectical Balance Model.md  三结合威力 (Triple-Helix Synergy).md  三结合群众路线创新模型.md  两条战线的斗争.md  人定胜天改造论.md  人民勤务员领导力模型.md  动态决策平衡模型.md  协同式政策制定模型.md  历史复盘驱动的现实纠偏模型.md  历史纵深赋能模型.md  哲学-科学验证闭环模型.md  地方工业服务农业战略.md  多谋善断决策模型.md  嵌入式生态系统战略.md  干部劳动常态化模型.md  思想动向预警与干预模型.md  思想动态预警系统.md  意识形态阵地论.md  战略性语言工具掌握.md  挡风授权 (The Blocking the Wind Mandate).md  文化创新三元融合模型.md  文化自信与学习型民族构建.md  新生事物放大器 (Upstream Signal Amplifier).md  有效沟通三原则.md  活报告工作法 (The Living Report Protocol).md  矛盾分析与转化模型.md  (+13 more)
output/毛主席教我们当省委书记【牛马】/: 00_全书概览_Index.md  knowledge_graph.json
output/毛主席教我们当省委书记【管理】/: knowledge_graph.json
output/毛泽东选集一至七卷【牛马】/: 00_全书概览_Index.md  knowledge_graph.json
output/毛泽东选集一至七卷【管理】/: 00_全书概览_Index.md  knowledge_graph.json
src/mao_thought_and_philosophy/: .gitignore  config.py  main.py
(+3243 files in other folders)
