[project]
name = "mao-thought-and-philosophy"
version = "0.1.0"
description = ""
authors = [
    {name = "yydsp",email = "yydspei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "mao_thought_and_philosophy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
